--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -1,10 +1,10 @@
 @misc{evenbly2022practical,
-  title={A Practical Guide to the Numerical Implementation of Tensor Networks I: Contractions, Decompositions and Gauge Freedom}, 
-  author={Glen Evenbly},
-  year={2022},
-  eprint={2202.02138},
-  archivePrefix={arXiv},
-  primaryClass={quant-ph}
+      title={{A Practical Guide to the Numerical Implementation of Tensor Networks I: Contractions, Decompositions and Gauge Freedom}}, 
+      author={Glen Evenbly},
+      year={2022},
+      eprint={2202.02138},
+      archivePrefix={arXiv},
+      primaryClass={quant-ph}
 }
 
 @article{PhysRevX.10.041038,
@@ -35,6 +35,17 @@ doi = {https://doi.org/10.1016/j.aop.2010.09.012},
 url = {https://www.sciencedirect.com/science/article/pii/S0003491610001752},
 author = {Ulrich Schollwöck},
 abstract = {The density-matrix renormalization group method (DMRG) has established itself over the last decade as the leading method for the simulation of the statics and dynamics of one-dimensional strongly correlated quantum lattice systems. In the further development of the method, the realization that DMRG operates on a highly interesting class of quantum states, so-called matrix product states (MPS), has allowed a much deeper understanding of the inner structure of the DMRG method, its further potential and its limitations. In this paper, I want to give a detailed exposition of current DMRG thinking in the MPS language in order to make the advisable implementation of the family of DMRG algorithms in exclusively MPS terms transparent. I then move on to discuss some directions of potentially fruitful further algorithmic development: while DMRG is a very mature method by now, I still see potential for further improvements, as exemplified by a number of recently introduced algorithms.}
+}
+
+@article{bezanson2017julia,
+  title={Julia: A fresh approach to numerical computing},
+  author={Bezanson, Jeff and Edelman, Alan and Karpinski, Stefan and Shah, Viral B},
+  journal={SIAM review},
+  volume={59},
+  number={1},
+  pages={65--98},
+  year={2017},
+  publisher={SIAM}
 }
 
 @article{gray2021hyper,
@@ -81,7 +92,7 @@ abstract = {The density-matrix renormalization group method (DMRG) has establish
 }
 
 @article{daniel2018opt,
-  title={opt\_einsum - A Python package for optimizing contraction order for einsum-like expressions},
+  title={{opt\_einsum - A Python package for optimizing contraction order for einsum-like expressions}},
   author={Daniel, G and Gray, Johnnie and others},
   journal={Journal of Open Source Software},
   volume={3},
@@ -102,24 +113,24 @@ abstract = {The density-matrix renormalization group method (DMRG) has establish
 }
 
 @misc{Pan2021,
-  title={Simulating the Sycamore quantum supremacy circuits}, 
-  author={Feng Pan and Pan Zhang},
-  year={2021},
-  eprint={2103.03074},
-  archivePrefix={arXiv},
-  primaryClass={quant-ph}
+      title={Simulating the Sycamore quantum supremacy circuits}, 
+      author={Feng Pan and Pan Zhang},
+      year={2021},
+      eprint={2103.03074},
+      archivePrefix={arXiv},
+      primaryClass={quant-ph}
 }
 
 @misc{omeinsumcontractionorders,
-  title = {OMEinsumContractionOrders.jl},
-  url = {https://github.com/TensorBFS/OMEinsumContractionOrders.jl/},
-  author = {Liu, Jin-Guo and Zhang, Pan},
+    title = {{OMEinsumContractionOrders.jl}},
+    howpublished = {https://github.com/TensorBFS/OMEinsumContractionOrders.jl/},
+    author = {Liu, Jin-Guo and Zhang, Pan},
 }
 
 @misc{devos2023tensoroperations,
-	title   = {TensorOperations.jl},
+	title   = {{TensorOperations.jl}},
 	author  = {Lukas Devos and Maarten Van Damme and Jutho Haegeman and contributors},
-	url     = {https://github.com/Jutho/TensorOperations.jl},
+	howpublished = {{https://github.com/Jutho/TensorOperations.jl}},
 	version = {v4.0.7},
 	doi		= {10.5281/zenodo.3245496},
 	year    = {2023},
@@ -132,7 +143,7 @@ abstract = {The density-matrix renormalization group method (DMRG) has establish
             Akhremtsev, Yaroslav and 
             Schulz, Christian and 
             Sanders, Peter}, 
-  title = {High-Quality Hypergraph Partitioning}, 
+  title = {{High-Quality Hypergraph Partitioning}},
   url = {https://doi.org/10.1145/3529090}, 
   doi = {10.1145/3529090}, 
   journal = {ACM J. Exp. Algorithmics},
@@ -170,7 +181,7 @@ abstract = {The density-matrix renormalization group method (DMRG) has establish
 }
 
 @article{fishman2022itensor,
-  title={The ITensor software library for tensor network calculations},
+  title={{The ITensor software library for tensor network calculations}},
   author={Fishman, Matthew and White, Steven and Stoudenmire, Edwin},
   journal={SciPost Physics Codebases},
   pages={004},
@@ -178,20 +189,20 @@ abstract = {The density-matrix renormalization group method (DMRG) has establish
 }
 
 @misc{tullio,
-    title = {Tullio.jl},
-    url = {https://github.com/mcabbott/Tullio.jl},
+    title = {{Tullio.jl}},
+    howpublished = {{https://github.com/mcabbott/Tullio.jl}},
     author={Abbott, Michael and contributors},
 }
 
 @misc{omeinsum,
-    title = {OMEinsum.jl},
-    url = {https://github.com/under-Peter/OMEinsum.jl},
+    title = {{OMEinsum.jl}},
+    howpublished = {{https://github.com/under-Peter/OMEinsum.jl}},
     author = {Peter, Andreas and Liu, Jin-Guo and contributors},
 }
 
 @misc{einsum,
     title = {Einsum.jl},
-    url = {https://github.com/ahwillia/Einsum.jl},
+    howpublished = {{https://github.com/ahwillia/Einsum.jl}},
     author = {Williams, Alex}
 }
 
@@ -206,4 +217,12 @@ abstract = {The density-matrix renormalization group method (DMRG) has establish
   author = {Simon Danisch and Julius Krumbiegel},
   title = {{Makie.jl}: Flexible high-performance data visualization for {Julia}},
   journal = {Journal of Open Source Software}
+}
+
+@misc{itensornetworks,
+  title = {{ITensorNetworks.jl}},
+  author = {Matthew Fishman and contributors},
+
+  howpublished = {{https://github.com/mtfishman/ITensorNetworks.jl}},
+  year = {2023},
 }
