--- a/paper/header.tex
+++ b/paper/header.tex
@@ -1,6 +1,6 @@
 % **************GENERATED FILE, DO NOT EDIT**************
 
-\title{\texttt{EinExprs}: Contraction Paths as Symbolic Expressions}
+\title{\texttt{EinExprs}: Contraction Paths of Tensor Networks as Symbolic Expressions}
 
 \author[1]{Sergio Sanchez-Ramirez}
 \author[1]{Jofre Vallès-Muns}
