--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -1,10 +1,11 @@
 @misc{evenbly2022practical,
-      title={{A Practical Guide to the Numerical Implementation of Tensor Networks I: Contractions, Decompositions and Gauge Freedom}}, 
-      author={Glen Evenbly},
-      year={2022},
-      eprint={2202.02138},
-      archivePrefix={arXiv},
-      primaryClass={quant-ph}
+  title={{A Practical Guide to the Numerical Implementation of Tensor Networks I: Contractions, Decompositions and Gauge Freedom}}, 
+  author={Glen Evenbly},
+  year={2022},
+  eprint={2202.02138},
+  archivePrefix={arXiv},
+  primaryClass={quant-ph},
+  doi={10.3389/fams.2022.806549}
 }
 
 @article{PhysRevX.10.041038,
@@ -23,18 +24,18 @@
 }
 
 @article{SCHOLLWOCK201196,
-title = {The density-matrix renormalization group in the age of matrix product states},
-journal = {Annals of Physics},
-volume = {326},
-number = {1},
-pages = {96-192},
-year = {2011},
-note = {January 2011 Special Issue},
-issn = {0003-4916},
-doi = {https://doi.org/10.1016/j.aop.2010.09.012},
-url = {https://www.sciencedirect.com/science/article/pii/S0003491610001752},
-author = {Ulrich Schollwöck},
-abstract = {The density-matrix renormalization group method (DMRG) has established itself over the last decade as the leading method for the simulation of the statics and dynamics of one-dimensional strongly correlated quantum lattice systems. In the further development of the method, the realization that DMRG operates on a highly interesting class of quantum states, so-called matrix product states (MPS), has allowed a much deeper understanding of the inner structure of the DMRG method, its further potential and its limitations. In this paper, I want to give a detailed exposition of current DMRG thinking in the MPS language in order to make the advisable implementation of the family of DMRG algorithms in exclusively MPS terms transparent. I then move on to discuss some directions of potentially fruitful further algorithmic development: while DMRG is a very mature method by now, I still see potential for further improvements, as exemplified by a number of recently introduced algorithms.}
+  title = {The density-matrix renormalization group in the age of matrix product states},
+  journal = {Annals of Physics},
+  volume = {326},
+  number = {1},
+  pages = {96-192},
+  year = {2011},
+  note = {January 2011 Special Issue},
+  issn = {0003-4916},
+  doi = {10.1016/j.aop.2010.09.012},
+  url = {https://www.sciencedirect.com/science/article/pii/S0003491610001752},
+  author = {Ulrich Schollwöck},
+  abstract = {The density-matrix renormalization group method (DMRG) has established itself over the last decade as the leading method for the simulation of the statics and dynamics of one-dimensional strongly correlated quantum lattice systems. In the further development of the method, the realization that DMRG operates on a highly interesting class of quantum states, so-called matrix product states (MPS), has allowed a much deeper understanding of the inner structure of the DMRG method, its further potential and its limitations. In this paper, I want to give a detailed exposition of current DMRG thinking in the MPS language in order to make the advisable implementation of the family of DMRG algorithms in exclusively MPS terms transparent. I then move on to discuss some directions of potentially fruitful further algorithmic development: while DMRG is a very mature method by now, I still see potential for further improvements, as exemplified by a number of recently introduced algorithms.}
 }
 
 @article{bezanson2017julia,
@@ -45,7 +46,8 @@ abstract = {The density-matrix renormalization group method (DMRG) has establish
   number={1},
   pages={65--98},
   year={2017},
-  publisher={SIAM}
+  publisher={SIAM},
+  doi={10.1137/141000671}
 }
 
 @article{gray2021hyper,
@@ -55,7 +57,8 @@ abstract = {The density-matrix renormalization group method (DMRG) has establish
   volume={5},
   pages={410},
   year={2021},
-  publisher={Verein zur F{\"o}rderung des Open Access Publizierens in den Quantenwissenschaften}
+  publisher={Verein zur F{\"o}rderung des Open Access Publizierens in den Quantenwissenschaften},
+  doi={10.22331/q-2021-03-15-410}
 }
 
 @article{pfeifer2014faster,
@@ -81,14 +84,16 @@ abstract = {The density-matrix renormalization group method (DMRG) has establish
   number={3},
   pages={963--981},
   year={2008},
-  publisher={SIAM}
+  publisher={SIAM},
+  doi={10.1137/050644756}
 }
 
 @article{pfeifer2014ncon,
   title={NCON: A tensor network contractor for MATLAB},
   author={Pfeifer, Robert NC and Evenbly, Glen and Singh, Sukhwinder and Vidal, Guifre},
   journal={arXiv preprint arXiv:1402.0939},
-  year={2014}
+  year={2014},
+  doi={10.48550/arXiv.1402.0939}
 }
 
 @article{daniel2018opt,
@@ -98,7 +103,8 @@ abstract = {The density-matrix renormalization group method (DMRG) has establish
   volume={3},
   number={26},
   pages={753},
-  year={2018}
+  year={2018},
+  doi={10.21105/joss.00753}
 }
 
 @misc{Liu2022,
@@ -113,18 +119,19 @@ abstract = {The density-matrix renormalization group method (DMRG) has establish
 }
 
 @misc{Pan2021,
-      title={Simulating the Sycamore quantum supremacy circuits}, 
-      author={Feng Pan and Pan Zhang},
-      year={2021},
-      eprint={2103.03074},
-      archivePrefix={arXiv},
-      primaryClass={quant-ph}
+  title={Simulating the Sycamore quantum supremacy circuits}, 
+  author={Feng Pan and Pan Zhang},
+  year={2021},
+  eprint={2103.03074},
+  archivePrefix={arXiv},
+  primaryClass={quant-ph},
+  doi={10.48550/arXiv.2103.03074}
 }
 
 @misc{omeinsumcontractionorders,
-    title = {{OMEinsumContractionOrders.jl}},
-    howpublished = {https://github.com/TensorBFS/OMEinsumContractionOrders.jl/},
-    author = {Liu, Jin-Guo and Zhang, Pan},
+  title = {{OMEinsumContractionOrders.jl}},
+  howpublished = {https://github.com/TensorBFS/OMEinsumContractionOrders.jl/},
+  author = {Liu, Jin-Guo and Zhang, Pan},
 }
 
 @misc{devos2023tensoroperations,
@@ -159,14 +166,16 @@ abstract = {The density-matrix renormalization group method (DMRG) has establish
   number={3-4},
   pages={283--292},
   year={2012},
-  publisher={Rinton Press, Incorporated Paramus, NJ}
+  publisher={Rinton Press, Incorporated Paramus, NJ},
+  doi={10.26421/qic12.3-4-8}
 }
 
 @article{gogate2012complete,
   title={A complete anytime algorithm for treewidth},
   author={Gogate, Vibhav and Dechter, Rina},
   journal={arXiv preprint arXiv:1207.4109},
-  year={2012}
+  year={2012},
+  doi={10.48550/arXiv.1207.4109}
 }
 
 @article{villalonga2020establishing,
@@ -177,7 +186,8 @@ abstract = {The density-matrix renormalization group method (DMRG) has establish
   number={3},
   pages={034003},
   year={2020},
-  publisher={IOP Publishing}
+  publisher={IOP Publishing},
+  doi={10.1088/2058-9565/ab7eeb}
 }
 
 @article{fishman2022itensor,
@@ -185,25 +195,26 @@ abstract = {The density-matrix renormalization group method (DMRG) has establish
   author={Fishman, Matthew and White, Steven and Stoudenmire, Edwin},
   journal={SciPost Physics Codebases},
   pages={004},
-  year={2022}
+  year={2022},
+  doi={10.21468/scipostphyscodeb.4}
 }
 
 @misc{tullio,
-    title = {{Tullio.jl}},
-    howpublished = {{https://github.com/mcabbott/Tullio.jl}},
-    author={Abbott, Michael and contributors},
+  title = {{Tullio.jl}},
+  howpublished = {{https://github.com/mcabbott/Tullio.jl}},
+  author={Abbott, Michael and contributors},
 }
 
 @misc{omeinsum,
-    title = {{OMEinsum.jl}},
-    howpublished = {{https://github.com/under-Peter/OMEinsum.jl}},
-    author = {Peter, Andreas and Liu, Jin-Guo and contributors},
+  title = {{OMEinsum.jl}},
+  howpublished = {{https://github.com/under-Peter/OMEinsum.jl}},
+  author = {Peter, Andreas and Liu, Jin-Guo and contributors},
 }
 
 @misc{einsum,
-    title = {Einsum.jl},
-    howpublished = {{https://github.com/ahwillia/Einsum.jl}},
-    author = {Williams, Alex}
+  title = {Einsum.jl},
+  howpublished = {{https://github.com/ahwillia/Einsum.jl}},
+  author = {Williams, Alex}
 }
 
 @article{DanischKrumbiegel2021,
@@ -222,7 +233,6 @@ abstract = {The density-matrix renormalization group method (DMRG) has establish
 @misc{itensornetworks,
   title = {{ITensorNetworks.jl}},
   author = {Matthew Fishman and contributors},
-
   howpublished = {{https://github.com/mtfishman/ITensorNetworks.jl}},
   year = {2023},
 }
